# chatkdb

./: .gitignore  README.md  pyproject.toml
src/: query.py  tokenize_syllab.py
